force-app/main/default/objects/Batch_Receipt_Report__c/Batch_Receipt_Report__c.object-meta.xml
<CustomObject>
    <label>Batch Receipt Report</label>
    <nameField>
        <displayFormat>BRR-{000000}</displayFormat>
        <label>Batch Receipt Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Receipt Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>