force-app/main/default/objects/Batch_Receipt_Report__c/fields/BankReconcile__c.field-meta.xml
<CustomField>
    <fullName>BankReconcile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BankReconcile</label>
    <referenceTo>Zumzum__BankReconcile__c</referenceTo>
    <relationshipLabel>Batch Receipt Reports</relationshipLabel>
    <relationshipName>Batch_Receipt_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>