force-app/main/default/objects/Batch_Receipt_Report__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Batch_Receipt_Report_Item__c.Amount__c</summarizedField>
    <summaryForeignKey>Batch_Receipt_Report_Item__c.Batch_Receipt_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>