force-app/main/default/objects/Batch_Receipt_Report__c/fields/Total_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Items__c</fullName>
    <label>Total Items</label>
    <summaryForeignKey>Batch_Receipt_Report_Item__c.Batch_Receipt_Report__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>