force-app/main/default/objects/Batch_Receipt_Report__c/fields/Total_Matched__c.field-meta.xml
<CustomField>
    <fullName>Total_Matched__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Matched</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>